--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -50,7 +50,7 @@
 
 
                     <div id="profile-data">
-                        <p>Front-end web developer with 7 years of professional experience in web design and development across diverse industries. 7 years of experience working in cross-functional, culturally diverse teams.  Specializes in JavaScript and CSS, as well as strong skills in writing clean and efficient code. With strong fundamentals and willingness to learn, has helped companies to focus on looking forward with their ideas instead of simply focusing on a specific, current technology. Shares commitment and passion for team growth.
+                        <p>Front-end web developer with 7 years of professional experience in development across diverse industries with culturally diverse teams. Specializes in JavaScript and CSS, as well as strong skills in writing clean and efficient code. With strong fundamental skills and passion for learning, I have helped companies develop their ideas instead of simply focusing on a specific, current technology. Shares commitment and passion for team growth.
                     </div>
                 </div>
 
@@ -65,7 +65,8 @@
                         </li>
                         <li>Responsive design</li>
                         <li>Browser developer tools</li>
-                        <li>Git/Github</li> <!-- OR VERSION CONTROL -->
+                        <!-- <li>Git/Github</li>  -->
+                        <li>Git/Version control</li> 
                         <li>Design patterns</li>
                         <li>Chrome Extension</li>
                         <li>Sass</li>
@@ -90,12 +91,14 @@
                     </ul> -->
                     <p><b>Soft Skills</b>:</p>
                     <ul>
+                        <!-- <li>Grit</li> -->
                         <li>Problem solving</li>
                         <li>Resourcefulness</li>
                         <li>Work Ethic</li>
                         <li>Listening</li>
                         <li>Team player</li>
                         <li>Empathy</li>
+                        
                     </ul>
                 </div>
 
@@ -137,7 +140,7 @@
                                    <!-- <li>Quickly determined and learned the essential skills and technologies to make an immediate, significant impact on the development of the App. We met the deadline.</li> -->
                                     <li>Translated Figma designs to actual code to produce user interfaces that create a consistent, yet tailored, cross-platform experience.</li>
                                     <!-- <li>Translate Figma designs to actual code that will produce visual elements of the application.</li> -->
-                                    <li>Tasked to refactor CSS for maintainability. That includes communicating on a daily basis with developers and designers to get information about the current state of the application. </li>
+                                    <!-- <li>Tasked to refactor CSS for maintainability. That includes communicating on a daily basis with developers and designers to get information about the current state of the application. </li> -->
                                     <li>Developed user interface components and ensured that these components and the overall application are robust and easy to maintain.</li>
                                     <!-- <li>Quickly learn new technologies to meet requirements and deadlines.</li> -->
                                     <!-- <li>Techologies used: Typescript, Ionic, Javascript, Sass. </li> -->
@@ -157,7 +160,7 @@
 
                             <div class="exp-item_body">
                                 <p style="margin: 8px 0">
-                                    Worked directly with the founder, Tycho Maarschall. to help further develop his ideas. Enhanced the company's website and to fulfill the needs of the clients. Aside from working on the company website, have worked on 3 client projects. Enhanced developer and user experience by developing maintainable codebase, and adding features which allow users to create content in a more visual way</p>
+                                    Worked directly with the founder<!-- , Tycho Maarschall.  --> to help further develop his ideas. Enhanced the company's website and to fulfill the needs of the clients. Aside from working on the company website, have worked on 3 client projects. Enhanced developer and user experience by developing maintainable codebase, and adding features which allow users to create content in a more visual way</p>
 
                             </div>
                         </div>
@@ -226,7 +229,7 @@
                                     <li>
                                         Worked and learned directly with the Lead programmer on the development of accounting softwares for restaurants, and a resort. Worked mostly on HTML, CSS, JS and a fair bit of work with PHP and MySQL. </li>
                                     </li>
-                                    <li>Mainly tasked to do bulk of the front-end jobs. I specialized in building responsive User Interfaces with HTML and CSS(with and without a CSS framework). </li>
+                                    <!-- <li>Mainly tasked to do bulk of the front-end jobs. I specialized in building responsive User Interfaces with HTML and CSS(with and without a CSS framework). </li> -->
 
                                 </ul>
 
@@ -304,17 +307,19 @@
                             </div>
 
                             <div class="exp-item_body">
-                                <p>Primary role was to work with software engineers from 2XL Games, a partner team based in Phoenix, Arizona to build games for mobile and PC. While working with 2XL Games, I primarily used C++ and their proprietary 2XL game engine.
-                                </p>
+                                <!-- <p>Primary role was to work with software engineers from 2XL Games, a partner team based in Phoenix, Arizona to build games for mobile and PC. While working with 2XL Games, I primarily used C++ and their proprietary 2XL game engine.
+                                </p> -->
 
                                 <div style="padding-left: 10px;">
                                     <ul>
-                                        <li><i class="" aria-hidden="true"></i> Programming - gameplay, user interface functionality, and behavior. </li>
+                                        <li><i class="" aria-hidden="true"></i> Primary role was to work with our partner team based in Phoenix, Arizona to build games for mobile and PC. </li>
+
+                                        <li><i class="" aria-hidden="true"></i> Programming - gameplay, user interface functionality, and behavior. Primarily used C++ and their proprietary 2XL game engine..</li>
 
                                         <li><i class="" aria-hidden="true"></i> Created efficient, modular, and reusable UI systems that can easily be used across different games </li>
 
-
-                                        <li><i class="" aria-hidden="true"></i> Built good relationships with our game artists resulting in efficient collaboration when building UI screens and game models. Learn with them how to create/modify basic HUD elements in 3ds Max and use plugins to export game models into a format required by the game engine.</li>
+<!-- 
+                                        <li><i class="" aria-hidden="true"></i> Collaborate with  artist to integrateLearn with them how to create/modify basic HUD elements in 3ds Max and use plugins to export game models into a format required by the game engine.</li> -->
 
                                     </ul>
                                 </div>
@@ -330,7 +335,7 @@
                             </div>
 
                             <div class="exp-item_body">
-                                <p>Worked with 4 teams(20 students) simultaneously. All teams used <a href "http://pulsetec.codeplex.com/">Pulse-Tec</a>(open-source 2D game engine) and C++ programming to develop the projects. </p>
+                                <!-- <p>Worked with 4 teams(20 students) simultaneously. All teams used <a href "http://pulsetec.codeplex.com/">Pulse-Tec</a>(open-source 2D game engine) and C++ programming to develop desktop apps. </p> -->
 
                                 <p><br>Project titles: <strong>"Tumbang Preso"</strong>, a Filipino Game, <strong>"HistoJump"</strong>, a board game, <strong>"WordWarTech"</strong>, a word game, and a <strong>Sign Language app</strong> (A training software for the mute).</p>
 
@@ -338,11 +343,13 @@
                                 <!-- <p>Responsibilities:</p> -->
 
                                 <ul>
-                                    <li><i class="" aria-hidden="true"></i> 2 games nominated for best thesis project.</li>
-                                    <li><i class="" aria-hidden="true"></i> Learned and shared the foundational skills needed for using the technology.</li>
+                                    <li><i class="" aria-hidden="true"></i> Worked with 4 teams(20 students) simultaneously. All teams used <a href "http://pulsetec.codeplex.com/">Pulse-Tec</a>(open-source 2D game engine) and C++ programming to develop desktop apps.</li>
+                                    <!-- <li><i class="" aria-hidden="true"></i> Learned and shared the foundational skills needed for using the technology.</li> -->
 
                                     <li><i class="" aria-hidden="true"></i> Developed workflow with each team and scheduled meetings, mentoring sessions, deadlines, etc.</li>
                                     <li><i class="" aria-hidden="true"></i> The technical person of reference- Guiding through technical issues and challenges.</li>
+                                    <li><i class="" aria-hidden="true"></i> 2 games nominated for best thesis project.</li>
+
                                 </ul>
 
                             </div>
