--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -19,7 +19,9 @@
 
     <!-- font-awesome icons -->
     <script src="https://use.fontawesome.com/76a57e8650.js"></script>
-
+    <script src="https://unpkg.com/feather-icons"></script>
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+    
 </head>
 
 <body>
@@ -31,7 +33,7 @@
                     <span>Front End Web Developer</span>
                 </div>
                 <ul>
-                    <li><span class="color-red">Email</span>: yihseverino@gmail.com</li>
+                    <li><span class="color-red"><i data-feather="circle"></i>Email</span>: yihseverino@gmail.com</li>
                     <li><span class="color-red">Portfolio</span>: leandroseverino.com</li>
                     <li><span class="color-red">Linkedin</span>: leanseverino</li>
                     <li><span class="color-red">Github</span>: github.com/LeanSeverino1022</li>
@@ -47,7 +49,7 @@
 
                 <div class="profile">
                     <h3 class="section-title">PROFILE</h3>
-
+                    <i data-feather="circle">sss</i>
 
                     <div id="profile-data">
                         <p>Front-end web developer with 7 years of professional experience in development across diverse industries with culturally diverse teams. Specializes in JavaScript and CSS, as well as strong skills in writing clean and efficient code. With strong fundamental skills and passion for learning, I have helped companies develop their ideas instead of simply focusing on a specific, current technology. Shares commitment and passion for team growth.
@@ -371,7 +373,9 @@
             </div>
             <!--end profile_body-->
         </div>
-
+        <script>
+            feather.replace()
+          </script>
 </body>
 
 </html>
