--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -10,6 +10,7 @@
     <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" /> -->
     <link href="css/normalize.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/style_2.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/theme_2.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/stickyheader.css" rel="stylesheet" type="text/css" media="all" />
 
 
@@ -33,10 +34,10 @@
                     <span>Front End Web Developer</span>
                 </div>
                 <ul>
-                    <li><span class="color-red"><i data-feather="circle"></i>Email</span>: yihseverino@gmail.com</li>
-                    <li><span class="color-red">Portfolio</span>: leandroseverino.com</li>
-                    <li><span class="color-red">Linkedin</span>: leanseverino</li>
-                    <li><span class="color-red">Github</span>: github.com/LeanSeverino1022</li>
+                    <li><span class="color-red"><i data-feather="mail"></i><!-- Email --></span> yihseverino@gmail.com</li>
+                    <li><span class="color-red"><i data-feather="globe"></i><!-- Portfolio --></span> leandroseverino.com</li>
+                    <li><span class="color-red"><i data-feather="linkedin"></i><!-- Linkedin --></span> leanseverino</li>
+                    <li><span class="color-red"><i data-feather="github"></i><!-- Github --></span> LeanSeverino1022</li>
                 </ul>
 
             </div>
@@ -373,8 +374,28 @@
             </div>
             <!--end profile_body-->
         </div>
+
+        
+
+<div class="area" >
+    <ul class="circles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+    </ul>
+</div >
         <script>
-            feather.replace()
+            feather.replace({
+                height: 18,
+                width: 18
+            })
           </script>
 </body>
 
