add animated background

--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -26,6 +26,23 @@
 </head>
 
 <body>
+    
+    <!-- animated background -->
+    <div class="area" >
+        <ul class="circles">
+                <li><i data-feather="code"></i></li>
+                <li><i data-feather="code"></i></li>
+                <li><i data-feather="code"></i></li>
+                <li><i data-feather="code"></i></li>
+                <li><i data-feather="code"></i></li>
+                <li><i data-feather="code"></i></li>
+                <li><i data-feather="code"></i></li>
+                <li><i data-feather="code"></i></li>
+                <li><i data-feather="code"></i></li>
+                <li><i data-feather="code"></i></li>
+        </ul>
+    </div >
+
     <div id="wrapper">
         <header>
             <div class="banner color-white">
@@ -375,22 +392,8 @@
             <!--end profile_body-->
         </div>
 
-        
 
-<div class="area" >
-    <ul class="circles">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-    </ul>
-</div >
+
         <script>
             feather.replace({
                 height: 18,
