--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -48,13 +48,13 @@
             <div class="banner color-white">
                 <div>
                     <h1>Leandro Severino</h1>
-                    <span>Front End Web Developer</span>
+                    <span class="position">Front End Web Developer</span>
                 </div>
-                <ul>
-                    <li><span class="color-red"><i data-feather="mail"></i><!-- Email --></span> yihseverino@gmail.com</li>
-                    <li><span class="color-red"><i data-feather="globe"></i><!-- Portfolio --></span> leandroseverino.com</li>
-                    <li><span class="color-red"><i data-feather="linkedin"></i><!-- Linkedin --></span> leanseverino</li>
-                    <li><span class="color-red"><i data-feather="github"></i><!-- Github --></span> LeanSeverino1022</li>
+                <ul class="header-icons">
+                    <li><span aria-label="Our phone number" class="header-icon"><i title="This symbolizes your being locked inside" data-feather="mail"></i><!-- Email --></span> yihseverino@gmail.com</li>
+                    <li><span class="header-icon"><i data-feather="globe"></i><!-- Portfolio --></span> leandroseverino.com</li>
+                    <li><span class="header-icon"><i data-feather="linkedin"></i><!-- Linkedin --></span> leanseverino</li>
+                    <li><span class="header-icon"><i data-feather="github"></i><!-- Github --></span> LeanSeverino1022</li>
                 </ul>
 
             </div>
@@ -67,7 +67,6 @@
 
                 <div class="profile">
                     <h3 class="section-title">PROFILE</h3>
-                    <i data-feather="circle">sss</i>
 
                     <div id="profile-data">
                         <p>Front-end web developer with 7 years of professional experience in development across diverse industries with culturally diverse teams. Specializes in JavaScript and CSS, as well as strong skills in writing clean and efficient code. With strong fundamental skills and passion for learning, I have helped companies develop their ideas instead of simply focusing on a specific, current technology. Shares commitment and passion for team growth.
