resume styles update

--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -15,7 +15,7 @@
 
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap" rel="stylesheet">
 
 
     <!-- font-awesome icons -->
@@ -51,10 +51,10 @@
                     <span class="position">Front End Web Developer</span>
                 </div>
                 <ul class="header-icons">
-                    <li><span aria-label="Our phone number" class="header-icon"><i title="This symbolizes your being locked inside" data-feather="mail"></i><!-- Email --></span> yihseverino@gmail.com</li>
-                    <li><span class="header-icon"><i data-feather="globe"></i><!-- Portfolio --></span> leandroseverino.com</li>
-                    <li><span class="header-icon"><i data-feather="linkedin"></i><!-- Linkedin --></span> leanseverino</li>
-                    <li><span class="header-icon"><i data-feather="github"></i><!-- Github --></span> LeanSeverino1022</li>
+                    <li><span title="email address" class="header-icon"><i data-feather="mail"></i><!-- Email --></span> yihseverino@gmail.com</li>
+                    <li><span title="website" class="header-icon"><i data-feather="globe"></i><!-- Portfolio --></span> leandroseverino.com</li>
+                    <li><span title="Linkedin username" class="header-icon"><i data-feather="linkedin"></i><!-- Linkedin --></span> leanseverino</li>
+                    <li><span title="Github username" class="header-icon"><i data-feather="github"></i><!-- Github --></span> LeanSeverino1022</li>
                 </ul>
 
             </div>
