--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -150,7 +150,7 @@
                             </div>
 
                             <div class="exp-item_body">
-                                <p style="margin: 8px 0">
+                                <p>
 
                                     Contracted by previous employer to help enhance an award-winning New Lens App developed using Ionic. </p>
 
@@ -178,7 +178,7 @@
                             </div>
 
                             <div class="exp-item_body">
-                                <p style="margin: 8px 0">
+                                <p>
                                     Worked directly with the founder<!-- , Tycho Maarschall.  --> to help further develop his ideas. Enhanced the company's website and to fulfill the needs of the clients. Aside from working on the company website, have worked on 3 client projects. Enhanced developer and user experience by developing maintainable codebase, and adding features which allow users to create content in a more visual way</p>
 
                             </div>
@@ -193,15 +193,15 @@
                             </div>
 
                             <div class="exp-item_body">
-                                <p style="margin: 8px 0">
+                                <p>
                                     Resultmaps is a peak performance platform. An application designed to help individuals, teams, and teams of teams. Worked directly with the CEO and the team to ensure that every user is provided with an outstanding, memorable experience.</p>
 
                                 <ul>
 
                                     <li>Rapid prototyping of ideas, concepts, and designs that users interact within a web application</>
                                     <li>Lead majority of the front-end jobs that relies heavily on both CSS and Javascript. </li>
-                                    <li>Modifying designs and specifications of complex applications.</li>
-                                    <li>Write, modify, and debug web applications using JavaScript, HTML and CSS</li>
+                                    <!-- <li>Modifying designs and specifications of complex applications.</li> -->
+                                    <!-- <li>Write, modify, and debug web applications using JavaScript, HTML and CSS</li> -->
                                     <li>Contributed significantly to the development of different tools such as a Gantt chart, kanban board, mindmap, Google Chrome extension and more  using different CSS/Javascript libraries and frameworks. </li>
                                     <li>Technologies used: HTML, CSS, Google Apps Script, Bootstrap, Javascript, jQuery, Vue.js, Knockout.js. D3.js, etc.  </li>
 
@@ -219,7 +219,7 @@
                             </div>
 
                             <div class="exp-item_body">
-                                <p style="margin: 8px 0">
+                                <p>
                                     Contracted <span class="hidden">by the company</span> to enhance website's user experience. Optimized website's design to be responsive(render well on a variety of screen sizes), transformed old designs to reflect new design requirements, cleaned up existing CSS code architecture for maintainability.
                                     <br><br>
                                     Technologies used: HTML, CSS, Javascript, Wordpress
@@ -240,7 +240,7 @@
                             </div>
 
                             <div class="exp-item_body">
-                                <p style="margin: 8px 0">
+                                <p>
                                     Worked at a startup company that provides effective management and technical services needed by local companies.
                                 </p>
                                 <ul>
@@ -270,21 +270,21 @@
 
                                 <div style="padding-left: 10px;">
                                     <ul>
-                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Worked with different individuals and companies(Resultmaps, Everthread, PLASS Management Solutions, Systema Solutions).</li>
+                                        <li class="hanging_indents">Worked with different individuals and companies(Resultmaps, Everthread, PLASS Management Solutions, Systema Solutions).</li>
 
-                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Create simple libraries for our team</li>
+                                        <li class="hanging_indents">Create simple libraries for our team</li>
 
-                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Created components using plain Javascript for frequently used App features. </li>
+                                        <li class="hanging_indents">Created components using plain Javascript for frequently used App features. </li>
 
-                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Fixed an existing website's faulty responsive design. </li>
+                                        <li class="hanging_indents">Fixed an existing website's faulty responsive design. </li>
 
-                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Contributed to the development of accounting softwares( more on HTML, CSS, JS and a little of Php, MySQL ). </li>
+                                        <li class="hanging_indents">Contributed to the development of accounting softwares( more on HTML, CSS, JS and a little of Php, MySQL ). </li>
 
-                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Created components using plain Javascript for frequently used features. </li>
+                                        <li class="hanging_indents">Created components using plain Javascript for frequently used features. </li>
 
-                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Created responsive web pages for client's needs(with and without a framework).</li>
+                                        <li class="hanging_indents">Created responsive web pages for client's needs(with and without a framework).</li>
 
-                                        <li class="hanging_indents"><i class="" aria-hidden="true"></i> Mainly tasked to do bulk of the front-end jobs / Front-end expert(Not an expert in aesthetics though). </li>
+                                        <li class="hanging_indents">Mainly tasked to do bulk of the front-end jobs / Front-end expert(Not an expert in aesthetics though). </li>
                                     </ul>
                                 </div>
                             </div>
@@ -300,14 +300,14 @@
 
                             <ul>
                                
-                                <li><i class="" aria-hidden="true"></i> Providing support by phone and chat to Priceline.com customers and Priceline.com hotel, car rental, and airline partners. Ensure the best resolution by working with other departments. </li>
-                                <li><i class="" aria-hidden="true"></i> Assist at least 50 customers per day, helping them understand the products and services, resolving complaints while maintaining professionalism and calmness in the face of high-pressure  situations. </li>
+                                <li>Providing support by phone and chat to <!-- Priceline.com  -->customers and our<!--  Priceline.com --> hotel, car rental, and airline partners. Ensure the best resolution by working with other departments. </li>
+                                <li>Assist at least 50 customers per day, helping them understand the products and services, resolving complaints while maintaining professionalism and calmness in the face of high-pressure  situations. </li>
                                 
 
-                                <li><i class="" aria-hidden="true"></i> Maintain strong product knowledge to better assist customers with concerns </li>
+                                <!-- <li>Maintain strong product knowledge to better assist customers with concerns </li> -->
 
 
-                                <!-- <li><i class="" aria-hidden="true"></i> Built good relationships with our game artists resulting in efficient collaboration when building UI screens and game models. Learn with them how to create/modify basic HUD elements in 3ds Max and use plugins to export game models into a format required by the game engine.</li> -->
+                                <!-- <li>Built good relationships with our game artists resulting in efficient collaboration when building UI screens and game models. Learn with them how to create/modify basic HUD elements in 3ds Max and use plugins to export game models into a format required by the game engine.</li> -->
                             </ul>
 
                             <!-- <div class="exp-item_body">
@@ -331,14 +331,14 @@
 
                                 <div style="padding-left: 10px;">
                                     <ul>
-                                        <li><i class="" aria-hidden="true"></i> Primary role was to work with our partner team based in Phoenix, Arizona to build games for mobile and PC. </li>
+                                        <li>Primary role was to work with our partner team based in Phoenix, Arizona to build games for mobile and PC. </li>
 
-                                        <li><i class="" aria-hidden="true"></i> Programming - gameplay, user interface functionality, and behavior. Primarily used C++ and their proprietary 2XL game engine..</li>
+                                        <li>Programming - gameplay, user interface functionality, and behavior. Primarily used C++ and their proprietary 2XL game engine..</li>
 
-                                        <li><i class="" aria-hidden="true"></i> Created efficient, modular, and reusable UI systems that can easily be used across different games </li>
+                                        <li>Created efficient, modular, and reusable UI systems that can easily be used across different games </li>
 
 <!-- 
-                                        <li><i class="" aria-hidden="true"></i> Collaborate with  artist to integrateLearn with them how to create/modify basic HUD elements in 3ds Max and use plugins to export game models into a format required by the game engine.</li> -->
+                                        <li>Collaborate with  artist to integrateLearn with them how to create/modify basic HUD elements in 3ds Max and use plugins to export game models into a format required by the game engine.</li> -->
 
                                     </ul>
                                 </div>
@@ -356,18 +356,18 @@
                             <div class="exp-item_body">
                                 <!-- <p>Worked with 4 teams(20 students) simultaneously. All teams used <a href "http://pulsetec.codeplex.com/">Pulse-Tec</a>(open-source 2D game engine) and C++ programming to develop desktop apps. </p> -->
 
-                                <p><br>Project titles: <strong>"Tumbang Preso"</strong>, a Filipino Game, <strong>"HistoJump"</strong>, a board game, <strong>"WordWarTech"</strong>, a word game, and a <strong>Sign Language app</strong> (A training software for the mute).</p>
+                                <p>Project titles: <strong>"Tumbang Preso"</strong>, a Filipino Game, <strong>"HistoJump"</strong>, a board game, <strong>"WordWarTech"</strong>, a word game, and a <strong>Sign Language app</strong> (A training software for the mute).</p>
 
 
                                 <!-- <p>Responsibilities:</p> -->
 
                                 <ul>
-                                    <li><i class="" aria-hidden="true"></i> Worked with 4 teams(20 students) simultaneously. All teams used <a href "http://pulsetec.codeplex.com/">Pulse-Tec</a>(open-source 2D game engine) and C++ programming to develop desktop apps.</li>
-                                    <!-- <li><i class="" aria-hidden="true"></i> Learned and shared the foundational skills needed for using the technology.</li> -->
+                                    <li>Worked with 4 teams(20 students) simultaneously. All teams used <a href "http://pulsetec.codeplex.com/">Pulse-Tec</a>(open-source 2D game engine) and C++ programming to develop desktop apps.</li>
+                                    <!-- <li>Learned and shared the foundational skills needed for using the technology.</li> -->
 
-                                    <li><i class="" aria-hidden="true"></i> Developed workflow with each team and scheduled meetings, mentoring sessions, deadlines, etc.</li>
-                                    <li><i class="" aria-hidden="true"></i> The technical person of reference- Guiding through technical issues and challenges.</li>
-                                    <li><i class="" aria-hidden="true"></i> 2 games nominated for best thesis project.</li>
+                                    <li>Developed workflow with each team and scheduled meetings, mentoring sessions, deadlines, etc.</li>
+                                    <!-- <li>The technical person of reference- Guiding through technical issues and challenges.</li> -->
+                                    <li>2 projects nominated for best thesis project.</li>
 
                                 </ul>
 
@@ -402,3 +402,10 @@
 </body>
 
 </html>
+
+<!-- TODO:
+
+    12/11
+     - replace padding and margins to px for now...not rem/em
+
+-->
