test fix issue html to pdf

--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -54,7 +54,7 @@
                     <li><a href="mailto:yihseverino@gmail.com"><span title="email address" class="header-icon"><i data-feather="mail"></i><!-- Email --></span> yihseverino@gmail.com</a></li>
                     <li><a href="https://leandroseverino.com" target="_blank"><span title="website" class="header-icon"><i data-feather="globe"></i><!-- Portfolio --></span> leandroseverino.com</a></li>
                     <li><a target="_blank" href="https://www.linkedin.com/in/leanseverino/"><span title="Linkedin username" class="header-icon"><i data-feather="linkedin"></i><!-- Linkedin --></span> leanseverino</a></li>
-                    <li><a target="_blank" href="https://github.com/LeanSeverino1022"><span title="Github username" class="header-icon"><i data-feather="github"></i><!-- Github --></span> LeanSeverino1022</a></li>
+                    <li><a target="_blank" href="https://github.com/LeanSeverino1022"></a><span title="Github username" class="header-icon"><i data-feather="github"></i><!-- Github --></span> LeanSeverino1022</li>
                 </ul>
 
             </div>
@@ -136,7 +136,7 @@
                 <div class="exp_sec">
 
                     <div class="exp_title">
-                        <h3 class="section-title">Experience</h3>
+                        <h3 class="section-title" style="margin-bottom: 28px">Experience</h3>
                     </div>
 
                     <div class="exp_list">
