--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -136,7 +136,7 @@
                 <div class="exp_sec">
 
                     <div class="exp_title">
-                        <h3 class="section-title" style="margin-bottom: 28px">Experience</h3>
+                        <h3 class="section-title">Experience</h3>
                     </div>
 
                     <div class="exp_list">
@@ -145,7 +145,7 @@
 
                             <div class="exp-item-header">
                                 <p class="period">SEPT(2020) - PRESENT </p>
-                                <h4 class="position" style="margin-top:28px">Front end developer (contract)</h4>
+                                <h4 class="position">Front end developer (contract)</h4>
                                 <h5 class="company"><span>ResultMaps</span></h5>
                             </div>
 
