--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -382,8 +382,8 @@
 
 
             <div>
-                <div id="download_cv">
-                    <span class="txt"><a target="_blank" href="https://drive.google.com/file/d/1IBatZx74uxDLm_lftWKk9xfvlTmKMDVC/view">( CLICK TO DOWNLOAD RESUME IN PDF FORMAT )</a></span>
+                <div id="download-resume">
+                    <span><a  target="_blank" href="https://drive.google.com/uc?export=download&id=1y1HclSD3tj80WuU-DYkfWZ_qLZgksksM">( CLICK TO DOWNLOAD RESUME IN PDF FORMAT )</a></span>
                 </div>
 
             </div>
