--- a/printable_cv/index.html
+++ b/printable_cv/index.html
@@ -141,7 +141,7 @@
                         <div class="exp-item page-break">
 
                             <div class="exp-item-header">
-                                <p class="period">SEPT(2020) - PRESENT </p>
+                                <p class="period">SEPT(2020) - MAR(2021) </p>
                                 
                                 <!-- needed this inline margin-top style to fix issues with converting to pdf via https://www.sejda.com/-->
                                 <h4 class="position" style="margin-top:28px">Front end developer (contract)</h4>
